--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/assignment.css">
 </head>
 
-<body class="raleway-normal">
+<body class="raleway-normal bg-color">
     <header class="header">
         <nav>
             <h3 class="nav-title inter-normal">LOGO</h3>
@@ -24,11 +24,40 @@
                 <h1 class="banner-title">
                     Cool Dark UI Template for Webflow Agencies!
                 </h1>
+                <button class="btn-primary">Stay Focused</button>
             </div>
         </div>
     </header>
     <main>
-
+        <section class="action">
+            <div class="action-content">
+                <h1 class="action-title">See It in Action</h1>
+                <p class="action-description">
+                    Explore the live preview and imagine your brand in this bold new look.
+                </p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <img class="action-img" src="./Assets/wc-mini.png" alt="Image of webflow convo 2022">
+        </section>
+        <!-- New Section -->
+        <section class="productive-user">
+            <h3 class="about-user">Joined Thousands of Productive Users</h3>
+            <div class="user-infos inter-normal">
+                <!-- .user-info*3>p.info-number+p.info-details -->
+                <div class="user-info">
+                    <p class="info-number">50K</p>
+                    <p class="info-details">Active Users</p>
+                </div>
+                <div class="user-info">
+                    <p class="info-number">2M+</p>
+                    <p class="info-details">Focus Sessions</p>
+                </div>
+                <div class="user-info">
+                    <p class="info-number">95%</p>
+                    <p class="info-details">Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
