--- a/index.html
+++ b/index.html
@@ -58,9 +58,35 @@
                 </div>
             </div>
         </section>
+        <section class="newsletter">
+            <div class="news-content">
+                <h3 class="news-title">Let’s Get in Touch</h3>
+                <form action="" class="inter-normal">
+                    <h4 class="news-input">Email</h4>
+                    <input type="email" name="" id="" placeholder="example@email.com">
+                    <h4 class="news-input">Name</h4>
+                    <input type="text" name="" id="" placeholder="full name">
+                    <h4 class="news-input">Message</h4>
+                    <textarea class="inter-normal" name="" id="" cols="20" rows="5"
+                        placeholder="write your message...."></textarea>
+                    <input class="raleway-normal submit" type="submit" value="Get in Touch">
+                </form>
+            </div>
+        </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer-column">
+            <h3 class="footer-title">LOGO</h3>
+            <p class="footer-para">Ready to elevate your online presence? Contact us today to discuss your project and
+                discover how we can bring your vision to life.</p>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">How it Works</a></li>
+                <li><a href="">Services</a></li>
 
+            </ul>
+        </div>
     </footer>
 </body>
 
