review part added thus completing a01

--- a/index.html
+++ b/index.html
@@ -58,6 +58,69 @@
                 </div>
             </div>
         </section>
+        <section class="user-review">
+            <h3 class="review-title">What our users say</h3>
+            <!-- .reviews*3>img+h4.review-type+p.review-description -->
+            <div class="review-wrapper">
+                <div class="review-content">
+                    <div class="review-stars">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                    </div>
+                    <h4 class="review-type">Loved by Designers</h4>
+                    <p class="review-description">This template instantly leveled up our presence.” – Studio Vertex
+                    </p>
+                    <div class="review-img-name">
+                        <img class="review-img" src="./Assets/avatar.png" alt="reviewer image">
+                        <div class="review-img-date">
+                            <p class="review-name">Reviewer name</p>
+                            <p class="review-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-content">
+                    <div class="review-stars">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                    </div>
+                    <h4 class="review-type">Loved by Designers</h4>
+                    <p class="review-description">This template instantly leveled up our presence.” – Studio Vertex
+                    </p>
+                    <div class="review-img-name">
+                        <img class="review-img" src="./Assets/avatar.png" alt="reviewer image">
+                        <div class="review-img-date">
+                            <p class="review-name">Reviewer name</p>
+                            <p class="review-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-content">
+                    <div class="review-stars">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                        <img src="./Assets/icon-star.png" alt="review star">
+                    </div>
+                    <h4 class="review-type">Loved by Designers</h4>
+                    <p class="review-description">This template instantly leveled up our presence.” – Studio Vertex
+                    </p>
+                    <div class="review-img-name">
+                        <img class="review-img" src="./Assets/avatar.png" alt="reviewer image">
+                        <div class="review-img-date">
+                            <p class="review-name">Reviewer name</p>
+                            <p class="review-date">Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="newsletter">
             <div class="news-content">
                 <h3 class="news-title">Let’s Get in Touch</h3>
@@ -69,7 +132,7 @@
                     <h4 class="news-input">Message</h4>
                     <textarea class="inter-normal" name="" id="" cols="20" rows="5"
                         placeholder="write your message...."></textarea>
-                    <input class="raleway-normal submit" type="submit" value="Get in Touch">
+                    <input class="raleway-normal submit-btn" type="submit" value="Get in Touch">
                 </form>
             </div>
         </section>
